# ChangeLog for www-apps/mythweb
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/www-apps/cvs-repo/gentoo-x86/www-apps/mythweb/ChangeLog,v 1.66 2009/07/19 05:43:22 cardoe Exp $

*mythweb-0.21_p20323 (19 Jul 2009)

  19 Jul 2009; Doug Goldstein <cardoe@gentoo.org>
  -mythweb-0.21_p16809.ebuild, mythweb-0.21_p17573.ebuild,
  +mythweb-0.21_p20323.ebuild:
  new version bump. use new eclass bits. clean up old version.

  03 Mar 2009; Steve Dibb <beandog@gentoo.org> mythweb-0.21_p16809.ebuild,
  mythweb-0.21_p17573.ebuild:
  Require php to be built with json, bug 251236

  23 Dec 2008; Markus Meier <maekke@gentoo.org> mythweb-0.21_p17573.ebuild:
  x86 stable, bug #239341

  21 Dec 2008; nixnut <nixnut@gentoo.org> mythweb-0.21_p17573.ebuild:
  Stable on ppc wrt bug 239341

  12 Dec 2008; Steve Dibb <beandog@gentoo.org> mythweb-0.21_p17573.ebuild:
  amd64 stable, bug 239341

*mythweb-0.21_p17573 (12 Aug 2008)

  12 Aug 2008; Doug Goldstein <cardoe@gentoo.org>
  -mythweb-0.20.2_p14282.ebuild, -mythweb-0.21_p16468.ebuild,
  +mythweb-0.21_p17573.ebuild:
  fix ogg/m4a music streaming

*mythweb-0.21_p16809 (01 Apr 2008)

  01 Apr 2008; Doug Goldstein <cardoe@gentoo.org>
  +mythweb-0.21_p16809.ebuild:
  fix issues with forget old & mythweb video search

  10 Mar 2008; Steve Dibb <beandog@gentoo.org> mythweb-0.21_p16468.ebuild:
  Add INSTALL to dodoc for reference, bug 212946

*mythweb-0.21_p16468 (09 Mar 2008)

  09 Mar 2008; Doug Goldstein <cardoe@gentoo.org>
  -mythweb-0.21_beta16297.ebuild, +mythweb-0.21_p16468.ebuild:
  0.21 release

  03 Mar 2008; Doug Klima <cardoe@gentoo.org> mythweb-0.20.2_p15488.ebuild:
  stable last 0.20.2 version

*mythweb-0.21_beta16297 (28 Feb 2008)

  28 Feb 2008; Doug Klima <cardoe@gentoo.org>
  +mythweb-0.21_beta16297.ebuild, -mythweb-0.21_pre15448.ebuild,
  -mythweb-0.21_pre15710.ebuild:
  add beta build. remove previous trunk builds due to protocol mismatch
