@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/www-apps/cvs-repo/gentoo-x86/www-apps/mythweb/Attic/mythweb-0.21_p17573.ebuild,v 1.6 2009/07/19 05:43:22 cardoe Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/www-apps/cvs-repo/gentoo-x86/www-apps/mythweb/Attic/mythweb-0.21_p17573.ebuild,v 1.7 2009/07/31 18:18:10 cardoe Exp $
 
 EAPI=2
 inherit mythtv webapp depend.php
@@ -11,6 +11,9 @@ KEYWORDS="amd64 ppc x86"
 
 RDEPEND="dev-perl/DBI
 	dev-perl/DBD-mysql"
+
+DEPEND="${RDEPEND}
+		app-arch/unzip"
 
 need_httpd_cgi
 need_php5_httpd
